--- a/.github/workflows/chat-in-issue.yaml
+++ b/.github/workflows/chat-in-issue.yaml
@@ -16,3 +16,4 @@ jobs:
           user-whitelist: ${{ vars.CHAT_IN_ISSUE_USER_WHITELIST }}
           prompt-limit: "8000"
           prompt-from-beginning-max: "500"
+          show-token-usage: "true"
